--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <title>Odin Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/chanamasala.html">Chana Masala</a>
     </body>
     </html>
