--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/chanamasala.html">Chana Masala</a>
+        <hr>
+        <ul>
+        <li><a href="recipes/chanamasala.html">Chana Masala</a></li>
+        <li a href="recipes/strawberrysmoothie.html">Strawberry Smoothie</li>
+        <li a href="recipes/pastasalad.html">Pasta Salad</li>
+        </ul>
     </body>
     </html>
