Add text for description and lists

--- a/recipes/chanamasala.html
+++ b/recipes/chanamasala.html
@@ -7,9 +7,37 @@
 
     <body>
 <h1>Chana Masala</h1>
-<img src="../images/chanaimg.jpg"
-<p></p>
+<img src="../images/chanaimg.jpg">
+<p>Chana Masala is an Indian dish that is absolutely delicious. Credit to <a href="https://cookieandkate.com/quick-vegan-chana-masala/">Cookie and Kate</a> for this recipe.</p>
 <hr>
-
+<h2>Ingredients</h2>
+<ul>
+    <li>1 cup uncooked brown basmati rice, for serving (rice is optional, I like to cook extra to have on hand for other meals)</li>
+    <li>2 tablespoons coconut oil or extra-virgin olive oil</li>
+    <li>1 medium yellow onion, chopped</li>
+    <li>1 medium serrano or jalapeño pepper, minced (remove ribs and seeds to tame the spice level). Omit this entirely if need be</li>
+    <li>½ teaspoon fine sea salt, to taste</li>
+    <li>5 cloves garlic, pressed or minced (about 1 tablespoon)</li>
+    <li>1 tablespoon peeled and minced fresh ginger (about a 1-inch piece)</li>
+    <li>1 ½ teaspoons garam masala** (can use tikka masala or even 1 teaspoon of yellow curry powder instead)</li>
+    <li>1 ½ teaspoons ground coriander</li>
+    <li>¾ teaspoon ground cumin</li>
+    <li>½ teaspoon ground turmeric</li>
+    <li>Pinch of cayenne pepper (optional!*)</li>
+    <li>1 large can (28 ounces) fire-roasted crushed tomatoes or whole peeled tomatoes, with their juices</li>
+    <li>2 cans (14 ounces each) chickpeas (or 3 cups cooked chickpeas), rinsed and drained</li>
+    <li>Lemon wedges, for garnish</li>
+    <li>Fresh cilantro, for garnish (optional)</li>
+</ul>
+<hr>
+<h2>Steps</h2>
+<ol>
+    <li>Cook the rice. Bring a large pot of water to boil on the stove and rinse the rice in a fine-mesh colander. Once boiling, pour in the rice and give it a stir. Boil the rice for 30m inutes, then turn off the heat and drain the rice. Return the rice to the pot and cover the pot. Let the rice steam for 10 minutes. Remove the lid, fluff the rice with a fork and season with sea salt to taste.</li>
+    <li>Cook the chana masala: In a medium Dutch oven or large saucepan, warm the oil over medium-low heat. Add the onion, serrano and salt. Cook until the onion is tender and turning translucent, about 5 minutes.</li>
+    <li>Add the garlic and ginger, and cook until fragrant, about 30 seconds to 1 minute. Stir in the garam masala, coriander, cumin, turmeric, salt and cayenne (if using), and cook for another minute, while stirring constantly.</li>
+    <li>Add the tomatoes and their juices. If using whole tomatoes, use the back of a wooden spoon to break the tomatoes apart (you can leave some chunks of tomato for texture).</li>
+    <li>Raise the heat to medium-high and add the chickpeas. Bring the mixture to a simmer. Cook, reducing the heat as necessary to maintain a gentle simmer, for 10 minutes or longer to allow the flavors to develop. Season to taste with additional salt, if desired. If it's not spicy enough for your liking, add another pinch of caynene.</li>
+    <li>Serve over basmati rice, if desired, and garnish with a lemon wedge or two and a sprinkle of fresh cilantro leaves.</li>
+</ol>
     </body>
 </html>
