Add link back to recipes page

--- a/recipes/chanamasala.html
+++ b/recipes/chanamasala.html
@@ -39,5 +39,6 @@
     <li>Raise the heat to medium-high and add the chickpeas. Bring the mixture to a simmer. Cook, reducing the heat as necessary to maintain a gentle simmer, for 10 minutes or longer to allow the flavors to develop. Season to taste with additional salt, if desired. If it's not spicy enough for your liking, add another pinch of caynene.</li>
     <li>Serve over basmati rice, if desired, and garnish with a lemon wedge or two and a sprinkle of fresh cilantro leaves.</li>
 </ol>
+<p>If you want more recipes, return to the <a href="../index.html">index</a>.</p>
     </body>
 </html>
