--- a/recipes/strawberrysmoothie.html
+++ b/recipes/strawberrysmoothie.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
-
+        <h1>Strawberry Smoothie</h1>
+        <img src="../images/strawbsmoothimg.jpg">
     </body>
 </html>
