Add link back and text for descriptions and lists

--- a/recipes/strawberrysmoothie.html
+++ b/recipes/strawberrysmoothie.html
@@ -8,5 +8,28 @@
     <body>
         <h1>Strawberry Smoothie</h1>
         <img src="../images/strawbsmoothimg.jpg">
+        <p>This strawberry smoothie is about as simple as it gets. It also tastes really good.</p>
+    <hr>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Frozen strawberries</li>
+        <li>Sugar</li>
+        <li>Water</li>
+        <li>Maybe some ice</li>
+        <li>Maybe a banana</li>
+    </ul>
+    <hr>
+    <h2>Steps</h2>
+    <ol>
+        <li>Get a blender out</li>
+        <li>Dump strawberries in it and fill it about halfway with water</li>
+        <li>Maybe put some ice in there so it's cold</li>
+        <li>Maybe put a banana in there if you want the smoothie to be creamy</li>
+        <li>Eyeball it and add sugar</li>
+        <li>Blend it on like pulvurize mode</li>
+        <li>Add more water if it isn't blending well</li>
+        <li>Add more sugar to taste</li>
+    </ol>
+    <p>If you want more recipes, return to the <a href="../index.html">index</a>.</p>
     </body>
 </html>
