--- a/recipes/pastasalad.html
+++ b/recipes/pastasalad.html
@@ -7,5 +7,7 @@
 
     <body><h1>Pasta Salad</h1>
     <img src="../images/pastaimg.jpg">
+
+<p>If you want more recipes, return to the<a href="../index.html">index</a>.</p>
 </body>
 </html>
