Add text for description and lists

--- a/recipes/pastasalad.html
+++ b/recipes/pastasalad.html
@@ -7,7 +7,27 @@
 
     <body><h1>Pasta Salad</h1>
     <img src="../images/pastaimg.jpg">
+    <p>This pasta salad rocks.</p>
+    <hr>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pasta of your choice (I recommend rigatoni)</li>
+        <li>Mayonnaise</li>
+        <li>Carrots</li>
+        <li>Onion (yellow? white? I don't know)</li>
+        <li>Celery</li>
+    </ul>
 
-<p>If you want more recipes, return to the<a href="../index.html">index</a>.</p>
+    <hr>
+    <h2>Steps</h2>
+    <ol>
+        <li>Get a pot of water and boil it</li>
+        <li>Put pasta in water once it is boiling and boil that to whatever pasta softness you like</li>
+        <li>While that is happening, cut the carrots, onion, and celery up into little chunks (you have to choose how many and how large you want the chunks to be)</li>
+        <li>Once the pasta is done, throw it in a bowl with the carrots, onion, and celery</li>
+        <li>Put a few spoonfuls of mayonnaise on it (to taste)</li>
+    </ol>
+
+<p>If you want more recipes, return to the <a href="../index.html">index</a>.</p>
 </body>
 </html>
