--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <hr>
         <ul>
         <li><a href="recipes/chanamasala.html">Chana Masala</a></li>
-        <li a href="recipes/strawberrysmoothie.html">Strawberry Smoothie</li>
-        <li a href="recipes/pastasalad.html">Pasta Salad</li>
+        <li><a href="recipes/strawberrysmoothie.html">Strawberry Smoothie</li>
+        <li><a href="recipes/pastasalad.html">Pasta Salad</li>
         </ul>
     </body>
     </html>
